# gegede

./: .gitignore  MANIFEST  README.md  README.org  pyproject.toml  setup.py
.github/workflows/: publish.yaml  test.yaml
doc/: builders.dot  builders.org  buildhier.dot  buildhier2.dot  configuration.org  construction.org  exporting.org  graxml.org  highlevel.dot  install.org  layers.dot  others.org  overlap-testing-with-root.org  presentation.tex  releases.org  schema.org  warts.org
examples/: README.org
examples/optical/: README.org  optical.cfg  optical.py  run.sh
examples/optical/g4app/: CMakeLists.txt  main.cc
examples/optical/g4app/include/: OpticalActionInitialization.hh  OpticalDetectorConstruction.hh  OpticalEventAction.hh  OpticalPhysicsList.hh  OpticalPrimaryGenerator.hh  OpticalRunAction.hh  OpticalSteppingAction.hh  PMTHit.hh  PMTSensitiveDetector.hh
examples/optical/g4app/macros/: dsotm.mac  run.mac  run_traj.mac  vis_traj.mac
examples/optical/g4app/python/: plot_hits.py  plot_traj.py
examples/optical/g4app/src/: OpticalActionInitialization.cc  OpticalDetectorConstruction.cc  OpticalEventAction.cc  OpticalPhysicsList.cc  OpticalPrimaryGenerator.cc  OpticalRunAction.cc  OpticalSteppingAction.cc  PMTHit.cc  PMTSensitiveDetector.cc
python/gegede/: __init__.py  builder.py  configuration.py  construct.py  dot.py  interp.py  iter.py  main.py  schema.py  util.py  validation.py
python/gegede/examples/: builders.py  lar.cfg  lar.py  simple.py
python/gegede/export/: __init__.py  gdml.py  ggdjson.py  pod.py  root.py  scenegraph.py
python/gegede/export/gdml/: __init__.py
python/gegede/export/gdml/schema/: gdml.xsd  gdml_core.xsd  gdml_define.xsd  gdml_materials.xsd  gdml_parameterised.xsd  gdml_replicas.xsd  gdml_solids.xsd
python/gegede/schema/: __init__.py  tools.py  types.py
src/gegede/: __init__.py  dot.py  iter.py  main.py  util.py
src/gegede/examples/: lar.py  simple.py
src/gegede/export/: __init__.py  root.py  scenegraph.py
src/gegede/export/gdml/: __init__.py
src/gegede/schema/: __init__.py  tools.py
tests/: common.py  test.gdml  test_builder.py  test_configuration.cfg  test_configuration.py  test_construct.py  test_construct_matter.py  test_construct_schema.py  test_construct_shapes.py  test_construct_structure.py  test_construct_volumes.py  test_export.py  test_export_root.py  test_gdml.py  test_gdml_optical.py  test_gdml_root.py  test_iter.py  test_main.py  test_matter.py  test_pivy.py  test_quantity.py  test_root_tgeo.py  test_schema.py  test_schema_tools.py  test_schema_types.py  test_shape_boolean.py  test_shape_cuttubs.py  test_shape_extruded.py  test_util.py
