[project]
name = "gegede"
version = "0.11"
description = "General Geometry Description"
authors = [
  {name = "Brett Viren", email = "brett.viren@gmail.com"},
]
maintainers = [
  {name = "Brett Viren", email = "brett.viren@gmail.com"},
]
license = {text = "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"}
readme = {file = "README.org", content-type = "text/org"}
keywords = ["geometry", "schema", "generator", "geant4", "gdml"]
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.3.0",
    "pdoc>=15.0.1",
    "pint>=0.24.4",
]

[project.optional-dependencies]
root = ["ROOT"]
test = ["pytest>=8.3.4"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project.scripts]
gegede = "gegede.main:main"
# original name, dunno why I tacked on "-cli".
gegede-cli = "gegede.main:main"
